# graffiti

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.ps1  config.toml.example  config.yaml  docker-compose.yml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.purpose/: index.json
activity/: boxing.py  combo_detection.py  contact_analyzer.py  fencing.py  martial_arts.py  mixed_martial_arts.py  ml_integration.py
biomechanics/: dynamics_analyzer.py  grf_analyzer.py  posture_converter.py  stability_analyzer.py
config/: athletics.yaml  biomechanics_config.yaml  boxing_analysis.yaml  config.yaml  config_loader.py  default_config.yaml  fencing.yaml  golf_config.yaml  stabilography.yaml
core/: pose_detector.py  scene_detector.py
crates/atmospheric/: Cargo.toml
crates/atmospheric/src/: conversion.rs  lib.rs  network.rs
crates/bmd/: Cargo.toml
crates/bmd/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  error.rs  honjo_integration.rs  kinshasa_integration.rs  lib.rs  self_aware_integration.rs  traits.rs  types.rs
crates/environmental/: Cargo.toml
crates/environmental/src/: analysis.rs  calibration.rs  integration.rs  lib.rs  sensors.rs
crates/molecular/: Cargo.toml
crates/molecular/src/: lib.rs
crates/perturbation/: Cargo.toml
crates/perturbation/src/: lib.rs
crates/s-entropy/: Cargo.toml
crates/s-entropy/src/: lib.rs
crates/temporal/: Cargo.toml
crates/temporal/src/: coordination.rs  lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: kinshasa-algorithm.tex  self-aware-belief-networks.tex
docs/publications/semantic-causal-propagation/: references.bib  semantic-causal-propagation.aux  semantic-causal-propagation.bbl  semantic-causal-propagation.blg  semantic-causal-propagation.fdb_latexmk  semantic-causal-propagation.fls  semantic-causal-propagation.out  semantic-causal-propagation.tex  semantic-causal-propagation.toc
docs/publications/semantic-causal-propagation/figures/: causal-captions.tex  panel_01_floor.py  panel_02_individuation.py  panel_03_representation_mobility.py  panel_04_path_opacity.py  panel_05_multiplicative_law.py  panel_06_saturation.py  panel_07_coherence.py  panel_08_closure_scheduler.py  run_all.py  style.py
docs/publications/semantic-causal-propagation/validation/: run_all.py
docs/publications/semantic-causal-propagation/validation/data/: scp_e01_floor.json  scp_e02_individuation.json  scp_e03_recognition_search.json  scp_e04_representation_mobility.json  scp_e05_receiver_relativity.json  scp_e06_convergence_admissibility.json  scp_e07_path_opacity.json  scp_e08_multiplicative_law.json  scp_e09_saturation_dichotomy.json  scp_e10_coherence_triangle.json  scp_e11_ordinal_decidability.json  scp_e12_closure_vs_threshold.json  scp_e13_convergent_or_declined.json  scp_e14_scheduler_soundness.json  scp_master_results.json
docs/publications/semantic-causal-propagation/validation/experiments/: __init__.py  (+14 more)
docs/sources/: causal-table-propagation.tex  domain-grammer-specification.tex  graffiti-dsl-sketch.md  honjo-dsl.tex  purpose-propagation.tex
docs/theory/: large-language-models.tex
golf/: ClubPathDrawer.py  GolfSwing.py  PoseDrawer.py
graffiti-research-demo/: Makefile  README.md  WINDOWS_SETUP.md  build.ps1  demo_revolutionary_search.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
graffiti-research-demo/graffiti/: __init__.py
graffiti-research-demo/graffiti/applications/: __init__.py  consciousness_demo.py  environmental_query.py  search_demo.py
graffiti-research-demo/graffiti/core/: __init__.py  bmd_operations.py  meaning_impossibility.py  s_entropy.py  types.py  universal_solver.py
graffiti-research-demo/graffiti/environmental/: __init__.py  atmospheric_molecular.py  cross_modal_bmv.py  twelve_dimensional.py
graffiti-research-demo/graffiti/integration/: __init__.py  unified_engine.py
graffiti-research-demo/graffiti_research_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
graffiti-research-demo/tests/: __init__.py  test_core_functionality.py
motion/: motion_classifier.py
pipeline/: biomechanics_analysis.py  golf_pipeline.py  main.py  motion_analysis.py  posture_converter.py  run_analysis_pipeline.py  run_biomechanics.py  run_motion.py  run_posture.py  run_scene.py  scene_analysis.py
spraypaint/: Cargo.toml  README.md
spraypaint/src/: ask.rs  bm25.rs  chunk.rs  config.rs  count.rs  main.rs  output.rs  phase.rs  root.rs  scene.rs  walk.rs  waterfill.rs
spraypaint/src/index/: identity.rs  mod.rs  schema.rs
spraypaint/tests/: invariants.rs
src/: main.rs
utils/: camera_calibrator.py  lane_detector.py  video_frame_manager.py  video_quality.py  video_reader.py  video_reconstructor.py
visualization/: mannequin_converter.py
web/: package-lock.json  package.json  purpose-reconciliation.md  tsconfig.json  tsconfig.tsbuildinfo
web/public/: uxrzone_pointcloud_room_free.glb
web/src/components/: Navbar.js  Repl.js  SceneModel.js
web/src/explore/: BarGroupChart.js  ContactNetworkView.js  CrossfilterContext.js  ExplorePage.js  ParamControls.js  crossfilterPack.js  runExploreProgram.js
web/src/graffiti/: INTERFACE.md  index.ts
web/src/graffiti/core/: catalysis.ts  closure.ts  graph.ts  individuation.ts  maxflow.ts  propagation.ts  representation.ts  scheduler.ts
web/src/graffiti/examples/: apollo-budget.ts
web/src/graffiti/lang/: ast.ts  interpreter.ts  lexer.ts  parser.ts  typechecker.ts  values.ts
web/src/graffiti/orchestration/: catalyst.ts  mock-catalysts.ts  orchestrator.ts  session.ts
web/src/graffiti/test/: harness.ts  run-all.ts  t01-floor.ts  t02-individuation.ts  t03-recognition-search.ts  t04-representation-mobility.ts  t05-path-opacity.ts  t06-multiplicative-law.ts  t07-saturation.ts  t08-coherence.ts  t09-closure.ts  t10-scheduler.ts  t11-lexer-parser.ts  t12-typechecker.ts  t13-interpreter.ts  t14-purpose-session.ts
web/src/pages/: _app.js  explore.js  index.js  repl.js
web/tutorials/: basic-graffiti.md
(+10 files in other folders)
