[package]
name = "graffiti-search"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Revolutionary proof-based search engine using environmental construction and atmospheric molecular processing"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/graffiti"
keywords = ["search", "proofs", "environmental", "atmospheric", "wasm"]
categories = ["web-programming", "science", "mathematics", "algorithms"]

[workspace]
members = [
    "crates/core",
    "crates/environmental",
    "crates/atmospheric", 
    "crates/temporal",
    "crates/s-entropy",
    "crates/bmd",
    "crates/molecular",
    "crates/perturbation",
    "crates/web",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Math and science
nalgebra = "0.32"
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
approx = "0.5"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Web framework
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
gloo-utils = "0.2"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"
rayon = "1.8"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }

# Performance
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"

[dependencies]
graffiti-core = { path = "crates/core" }
graffiti-environmental = { path = "crates/environmental" }
graffiti-atmospheric = { path = "crates/atmospheric" }
graffiti-temporal = { path = "crates/temporal" }
graffiti-s-entropy = { path = "crates/s-entropy" }
graffiti-bmd = { path = "crates/bmd" }
graffiti-molecular = { path = "crates/molecular" }
graffiti-perturbation = { path = "crates/perturbation" }
graffiti-web = { path = "crates/web" }

# Main dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[[bench]]
name = "atmospheric_processing"
harness = false

[[bench]]
name = "environmental_measurement"
harness = false

[[bench]]
name = "proof_construction"
harness = false

[profile.release]
# Optimize for size and performance in release builds
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
# WASM-specific optimizations
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"
