[package]
name = "graffiti-perturbation"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Perturbation validation system for proof stability testing"
license = "MIT"

[dependencies]
graffiti-core = { path = "../core" }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
