[package]
name = "graffiti-temporal"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Sango Rine Shumba temporal coordination framework for zero-latency delivery"
license = "MIT"
keywords = ["temporal", "coordination", "precision", "latency"]

[dependencies]
graffiti-core = { path = "../core" }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
